--- a/style/base.css
+++ b/style/base.css
@@ -5,6 +5,7 @@
 /* shadow config */
 /* basic elements */
 html {
+  font-size: 16px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -47,6 +48,27 @@ li {
   display: inline-grid;
 }
 
+.block {
+  display: block;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
+
 /* Flexbox & Grid */
 .flex-col {
   -webkit-box-orient: vertical;
@@ -64,6 +86,12 @@ li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.j-end {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .j-around {
@@ -89,9 +117,35 @@ li {
           align-items: center;
 }
 
+.a-self-center {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
 /* Typography */
 .text-center {
   text-align: center;
+}
+
+.font-12 {
+  font-size: 0.75rem;
+}
+
+.font-14 {
+  font-size: 0.875rem;
+}
+
+.font-18 {
+  font-size: 1.125rem;
+}
+
+.font-20 {
+  font-size: 1.25rem;
+}
+
+.font-24 {
+  font-size: 1.5rem;
 }
 
 /* Background */
