--- a/projects/webDM/profile-widget/style.css
+++ b/projects/webDM/profile-widget/style.css
@@ -1,4 +1,4 @@
-@import '../../../style/meta.css';
+@import '/style/meta.css';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 
 :root {
