--- a/style/home.css
+++ b/style/home.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 html,
 body {
-  font-family: monospace, Roboto, Inter var, system-ui, -apple-system,
+  font-family: Space Grotesk, Roboto, Inter var, system-ui, -apple-system,
     BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial, Noto Sans,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji,
     sans-serif;
@@ -17,6 +20,7 @@ body {
 a {
   color: inherit;
 }
+
 a:hover {
   font-weight: 600;
 }
