--- a/style/home.css
+++ b/style/home.css
@@ -7,7 +7,7 @@ body {
     BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial, Noto Sans,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji,
     sans-serif;
-  font-size: 100%;
+  font-size: 16px;
 }
 
 *,
@@ -22,7 +22,7 @@ a {
 }
 
 a:hover {
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .container {
