--- a/site-factory/src/index.css
+++ b/site-factory/src/index.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   font-family: Space Grotesk, Roboto, Inter var, system-ui, -apple-system,
@@ -8,7 +12,6 @@ body {
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji,
     sans-serif;
   font-size: 16px;
-  color: black;
 }
 
 *,
@@ -16,16 +19,4 @@ body {
 *::after {
   margin: 0;
   padding: 0;
-}
-
-a {
-  color: inherit;
-}
-
-a:hover {
-  font-weight: 700;
-}
-
-a:link {
-  text-underline-offset: 4px;
 }
