--- a/calculator/style/style.css
+++ b/calculator/style/style.css
@@ -1,6 +1,7 @@
 body {
-  background-color: #333;
+  background-color: #2c2c2c;
   font-family: "sans-serif";
+  color: #fff;
 }
 
 .centerContainer {
