--- a/calculator/style/settingFrame.css
+++ b/calculator/style/settingFrame.css
@@ -6,16 +6,17 @@
   /* width: 900px; */
   width: 0px;
   height: 700px;
-  background-color: #4d4d4d;
+  background-color: #8ca0d4;
+  /* background-color: #4d4d4d; */
   border-radius: 20px;
   box-shadow: 4px 4px 8px #000;
-  /* display: none; */
   position: fixed;
   z-index: 10;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   overflow: hidden;
+  transition: width 0.2s ease, background-color 0.3s ease;
 }
 
 #searchAndQuit {
