--- a/calculator/style/settingFrame.css
+++ b/calculator/style/settingFrame.css
@@ -4,9 +4,10 @@
   align-items: center;
   /* justify-content: center; */
   /* width: 900px; */
-  width: 0px;
+  width: 900px;
   height: 700px;
-  background-color: #8ca0d4;
+  background-color: #4d4d4d;
+  visibility: hidden;
   /* background-color: #4d4d4d; */
   border-radius: 20px;
   box-shadow: 4px 4px 8px #000;
@@ -16,7 +17,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   overflow: hidden;
-  transition: width 0.2s ease, background-color 0.3s ease;
+  transition: width 0.2s ease;
 }
 
 #searchAndQuit {
