--- a/calculator/style/style.css
+++ b/calculator/style/style.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&display=swap");
+
 body {
   background-color: #2c2c2c;
-  font-family: "sans-serif";
+  font-family: "JetBrains Mono", monospace, "sans-serif";
   color: #fff;
 }
 
@@ -27,7 +29,7 @@ body {
 .hinkFrame {
   position: fixed;
   z-index: 9999;
-  font-family: sans-serif;
+  font-family: "JetBrains Mono", monospace, "sans-serif";
   font-size: 40px;
   font-weight: bold;
   color: #fff;
