--- a/calculator/style/sidebar.css
+++ b/calculator/style/sidebar.css
@@ -12,6 +12,7 @@
   overflow: hidden;
   transition: width 0.3s ease;
   position: static;
+  flex-shrink: 0;
 }
 
 #sidebar li {
@@ -32,10 +33,6 @@
 
   width: 130px;
 }
-
-/*#siderList li {
-        width: 130px;
-      }*/
 
 #siderList li:hover {
   background-color: #ffffff;
